tests/neg/i13114/A.scala
def f = 42

class C
